<?xml version="1.0"?>
<package format="2">
  <name>command_bridge</name>
  <version>0.0.0</version>
  <description>The command_bridge package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kongsberg_em_control</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>kongsberg_em_control</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>kongsberg_em_control</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
